title : title update

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://pastatic.picsart.com/cms-pastatic/a955cef0-f4ba-415c-bb7a-722f01a68cf6.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Picsart</title>
+    <title>PhotoGallery</title>
   </head>
   <body>
     <div id="root"></div>
